--- a/agendamento/src/app/views/header/header.component.html
+++ b/agendamento/src/app/views/header/header.component.html
@@ -1,10 +1,26 @@
-<div class="page">
+
 <mat-toolbar class="toolbar-main">
-    <mat-toolbar-row class="toolbar-sub">
-        <span>Agendamento</span>
-        <span class="example-spacer"></span>
-        <mat-icon class="example-icon" aria-hidden="false" aria-label="Example heart icon">favorite</mat-icon>
-        <mat-icon class="example-icon" aria-hidden="false" aria-label="Example delete icon">delete</mat-icon>
-    </mat-toolbar-row>
+    <div class="toolbar-img">
+        <div class="container-page">
+            <mat-toolbar-row class="toolbar-sub">
+                <span>AgendamentoBarber</span>
+                <span class="example-spacer"></span>
+                <mat-icon class="example-icon" aria-hidden="false" aria-label="Example heart icon">favorite</mat-icon>
+                <mat-icon class="example-icon" aria-hidden="false" aria-label="Example delete icon">delete</mat-icon>
+            </mat-toolbar-row>
+
+            <div class="container-info">
+                <div class="estabelecimento">
+                    <span>Nome do estabelecimento Barber</span>
+                </div>
+                <div class="endereco">
+                    <span>Exemplo de endereço do estabelecimento barber</span>
+                </div>
+                <div class="status">
+                    <span>Fechado</span>
+                </div>
+            </div>
+            
+        </div>
+    </div>
 </mat-toolbar>
-</div>
