--- a/agendamento/src/styles.css
+++ b/agendamento/src/styles.css
@@ -1,8 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
+
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-.page{
+
+.container-page{
     margin-left: 20%;
     margin-right: 20%;
 }
