--- a/agendamento/src/app/views/footer/footer.component.html
+++ b/agendamento/src/app/views/footer/footer.component.html
@@ -1,1 +1,8 @@
-<p>footer works!</p>
+<mat-toolbar class="toolbar-main">
+    <div class="container-page">
+        <mat-toolbar-row>
+            <span>AgendamentoBarber</span>
+            <div class="direitos">Developed by: Filipe Castro &copy; Todos direitos reservados. </div>
+        </mat-toolbar-row>
+    </div>
+</mat-toolbar>
