--- a/agendamento/src/styles.css
+++ b/agendamento/src/styles.css
@@ -2,7 +2,7 @@
 
 html, body { height: 100%; }
 
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #f2f2f2; }
 
 .container-page{
     margin-left: 20%;
