--- a/agendamento/src/app/views/footer/footer.component.css
+++ b/agendamento/src/app/views/footer/footer.component.css
@@ -2,8 +2,9 @@
     background-color: #1b1d21;
     color: #fff;
     font-size: 0.9rem;
+    margin-top: 3rem;
     bottom: 0;
-    position: absolute;
+    position: relative;
 }
 
 .direitos{
